updating app name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-project-frontend",
+  "name": "london-fashion-exchange",
   "description": "",
   "main": "app.js",
   "authors": [
