changing login details

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "final-project-frontend",
+  "name": "london-fashion-exchange",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
